[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-repair-env"
version = "0.1.3"
description = "Code repair RL environment for Prime Intellect verifiers"
requires-python = ">=3.10"
dependencies = ["verifiers>=0.1.8", "datasets>=3.0.0"]
keywords = ["code", "python", "debugging", "single-turn"]
tags = ["code-repair", "python", "debugging", "single-turn"]

[project.entry-points."verifiers.environments"]
code-repair-env = "code_repair_env.environment:load_environment"

[tool.hatch.build.targets.wheel]
packages = ["code_repair_env"]
